Fix HTML structure and add logo SVG

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
   <header class="header">
     <div class="container nav">
       <a class="brand" href="index.html" aria-label="Ir para a página inicial">
-        <span class="logo" aria-hidden="true"></span>
+        <span class="logo-mark" aria-hidden="true">
+  <svg viewBox="0 0 48 48" width="32" height="32">
+    <path d="M8 10 L22.5 38 H25.5 L40 10 L34.5 10 L24 30.5 L13.5 10 Z"
+          fill="currentColor"/>
+    <path d="M16.5 14 L24 28.5 L31.5 14 Z"
+          fill="rgba(11,15,20,.85)"/>
+  </svg>
+        </span>
         <span>Ad Veritatem</span>
       </a>
       <nav class="menu" aria-label="Navegação principal">
@@ -79,4 +86,5 @@
 
   <script type="module" src="./assets/app.js"></script>
 </body>
+
 </html>
