Revise contribution message in index.html
Updated the contribution section to include that part of the funds will be donated to charity, missions, projects, or orphanages.

--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
         <div class="pad">
           <div class="kicker">Contribua se quiser</div>
           <p class="small">
-            Se esse conteúdo te ajudar, você pode contribuir de forma voluntária via PIX.
+            Se esse conteúdo te ajudar, você pode contribuir de forma voluntária, parte do valor arrecadado será destinado à caridade, missões, projetos ou orfanatos.
           </p>
 
           <div class="notice">
             <div class="small">Chave PIX:</div>
-            <div id="pixKey" style="font-weight:700; margin-top:6px;">COLE_SUA_CHAVE_PIX_AQUI</div>
+            <div id="pixKey" style="font-weight:700; margin-top:6px;">
+  daniel.ad.veritatem@gmail.com
+            </div>
             <div style="margin-top:10px;">
               <button id="copyPix" type="button">Copiar PIX</button>
             </div>
@@ -92,5 +94,6 @@
 </body>
 
 </html>
+
 
 
