Update contact section with email information
Added email contact information to the site.

--- a/sobre.html
+++ b/sobre.html
@@ -59,12 +59,20 @@
           <hr class="sep" />
 
           <h3>Contato</h3>
-          <p>Você pode me encontrar no Instagram:</p>
-          <p>
-            <a href="https://www.instagram.com/basilio_dan.el" target="_blank" rel="noopener">
-              @basilio_dan.el
-            </a>
-          </p>
+
+<p>
+  Você pode me encontrar no Instagram ou por e-mail:
+</p>
+
+<p>
+  <a href="https://www.instagram.com/basilio_dan.el" target="_blank" rel="noopener">
+    @basilio_dan.el
+  </a>
+  <br />
+  <a href="mailto:daniel.ad.veritatem@gmail.com">
+    daniel.ad.veritatem@gmail.com
+  </a>
+</p>
         </div>
       </div>
     </section>
@@ -80,3 +88,4 @@
   <script type="module" src="./assets/app.js"></script>
 </body>
 </html>
+
